--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             const [currentEntry, setCurrentEntry] = useState(null);
             const [showTrends, setShowTrends] = useState(false);
             const [showInstructions, setShowInstructions] = useState(false);
-            const [notesSaved, setNotesSaved] = useState(true);
-            
+
             const symptoms = [
  { id: 'hotFlashes', label: 'Hot Flashes', icon: '🔥', color: 'bg-red-100 border-red-300', leftLabel: 'None', rightLabel: 'Severe' },
     { id: 'sleepProblems', label: 'Sleep Problems', icon: '😴', color: 'bg-blue-100 border-blue-300', leftLabel: 'None', rightLabel: 'Severe' },
@@ -140,17 +139,11 @@
                 saveEntry(updated);
             };
 
-          const updateNotes = (notes) => {
-    setNotesSaved(false); // Show "saving..." state
-    const updated = { ...currentEntry, notes };
-    setCurrentEntry(updated);
-    saveEntry(updated);
-    
-    // Show "saved" feedback after brief delay
-    setTimeout(() => {
-        setNotesSaved(true);
-    }, 500);
-};
+            const updateNotes = (notes) => {
+                const updated = { ...currentEntry, notes };
+                setCurrentEntry(updated);
+                saveEntry(updated);
+            };
 
             const saveEntry = (entry) => {
                 const index = entries.findIndex(e => e.date === entry.date);
@@ -502,23 +495,16 @@
                             </div>
                         </div>
 
-{/* Notes */}
-<div className="bg-white rounded-2xl shadow-lg p-6 mb-6">
-    <div className="flex justify-between items-center mb-4">
-        <h3 className="text-lg font-semibold text-gray-800">Notes for today</h3>
-        <div className="text-sm">
-            {notesSaved ? (
-                <span className="text-green-600 flex items-center gap-1">
-                    <span>✓</span> Saved
-                </span>
-            ) : (
-                <span className="text-gray-500">Saving...</span>
-            )}
-        </div>
-    </div>
-    <textarea
-        value={currentEntry?.notes || ''}
-        onChange={(e) => updateNotes(e.target.value)}
+                        {/* Notes */}
+                        <div className="bg-white rounded-2xl shadow-lg p-6 mb-6">
+                            <h3 className="text-lg font-semibold mb-4 text-gray-800">Notes for today</h3>
+                            <textarea
+                                value={currentEntry?.notes || ''}
+                                onChange={(e) => updateNotes(e.target.value)}
+                                placeholder="How did you sleep? What helped? Any observations..."
+                                className="w-full h-24 p-3 border border-gray-200 rounded-lg resize-none focus:ring-2 focus:ring-purple-500"
+                            />
+                        </div>
 
                         {/* Stats */}
                         {entries.length > 0 && (
