--- a/index.html
+++ b/index.html
@@ -532,7 +532,15 @@ const moodOptions = [
                                 <span>🔒</span>
                                 <span className="font-medium">100% Private - Data stays on your device</span>
                             </div>
-                            <p className="text-xs">Bookmark this page or add to home screen!</p>
+                           <div className="flex items-center justify-center gap-2 mb-2">
+        <span>💬</span>
+        <span className="font-medium">Send feedback: </span>
+        <a href="mailto:james.serra+menotrack@gmail.com?subject=Menopause Tracker Feedback" 
+           className="text-purple-600 underline">
+            james.serra+menotrack@gmail.com
+        </a>
+    </div>
+    <p className="text-xs">What's missing? What's confusing? What works well?</p>
                         </div>
                     </div>
                 </div>
